--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,9 +86,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:elevation="30dp"
                 app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="10dp">
+                app:cardCornerRadius="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -99,7 +98,7 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_marginStart="10dp"
-                        android:elevation="15dp"
+                        android:elevation="5dp"
                         app:cardBackgroundColor="@color/lightgrey"
                         app:cardCornerRadius="10dp"
                         android:layout_gravity="center">
@@ -126,7 +125,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:layout_marginTop="10dp">
 
                             <TextView
                                 android:id="@+id/tvTemp"
@@ -184,7 +184,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
+                            android:layout_marginBottom="10dp"
                             android:textColor="@color/white"
                             android:textStyle="bold"
                             tools:text="Date" />
@@ -196,13 +196,22 @@
             </androidx.cardview.widget.CardView>
 
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:background="@android:color/darker_gray" />
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:elevation="30dp"
                 android:padding="10dp"
+                android:layout_marginTop="20dp"
                 app:cardBackgroundColor="@android:color/transparent"
-                app:cardCornerRadius="10dp">
+                app:cardCornerRadius="5dp"
+                android:layout_marginBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -358,11 +367,19 @@
 
             </androidx.cardview.widget.CardView>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:background="@android:color/darker_gray" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="5 Days Report / 3 Hour Interval:"
                 android:textColor="@color/white" />
@@ -378,7 +395,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="Popular in India :"
                 android:textColor="@color/white" />
